# MAP-Portfolio

./: .gitignore  administration.html  index.html  mystyle.css  papers.html  presentations.html  resources.html  techreport.html
Administration/: administration.html
Papers/: papers.html
Presentations/: presentations.html
Resources/: resources.html
Tech report/: techreport.html
Tech report/Code/MATLAB/trajectory_precision/: README.txt  getBoxplotX.m  getBoxplotY.m  getBoxplotZ.m  getBoxplotsXYZ.m  getValidDelta.m  getValidDeltaXYZ.m  getXYZPlot.m  quat2rpy.m  reference_estimate.csv  test10_estimate.csv  test1_estimate.csv  test2_estimate.csv  test3_estimate.csv  test4_estimate.csv  test5_estimate.csv  test6_estimate.csv  test7_estimate.csv  test8_estimate.csv  test9_estimate.csv  trajectories.mat
Tech report/Code/Shell scripts/: LSD_SLAM_bag_demo.sh  LSD_SLAM_live_demo.sh  RGBD_SLAM_live_demo.sh  binvox.sh  erle_ssh.sh  front_view.sh  gazebo_simulation.sh  play_bagfile.sh  record_generic.sh  record_kinect_real.sh  record_kinect_sim.sh  rgbdslam_online.sh  set_ros_master.sh
Tech report/Code/Shell scripts/SLAM/LSDSLAM/: open_lsd_slam_viewer.sh  run_lsd_slam.sh
Tech report/Code/Shell scripts/SLAM/RGBDSLAM/: run_rgbd_slam.sh
Tech report/Code/Shell scripts/simulation_launchscripts/: launch_mavproxy.sh  link_mavros.sh  remote.sh  spawn_copter.sh
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/cvpr-cuda/: rosdep.yaml  stack.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/cvpr-cuda/cuda_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/cvpr-cuda/cuda_tests/tests/: addMatricesServer.cpp  addMatrix.cu
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/cvpr-tools/: stack.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/: stack.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd/: CMakeLists.txt
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd/src/: SegmentMain.cpp  SegmentMain.h  SegmentView.cpp  SegmentView.h  main.cpp
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd_opengl/: CMakeLists.txt  mainpage.dox  manifest.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd_opengl/include/: KinectGLWidget.h
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd_opengl/launch/: run.launch
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/kinect_examples/qt_rgbd_opengl/src/: KinectGLWidget.cpp  main.cpp
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/ptam-wrapper/: stack.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/rgbd_benchmark/: stack.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/rgbd_benchmark/cortex_stream/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/rgbd_benchmark/cortex_stream/include/cortex_stream/: cortex.h
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/rgbd_benchmark/cortex_stream/launch/: cortex_fake_stream.launch  cortex_stream.launch
Tech report/Code/ros_catkin_ws/src/cvpr-ros-pkg/rgbd_benchmark/cortex_stream/src/: cortex_fake_stream.cpp  cortex_stream.cpp
Tech report/Code/ros_catkin_ws/src/gscam/launch/: gscam.launch  gscam_640_480.launch
Tech report/Code/ros_catkin_ws/src/kinect_transformer/: CMakeLists.txt  kinect_tf_broadcaster.py  package.xml  tf_transformer.py
Tech report/Code/ros_catkin_ws/src/kinect_transformer/launch/: transformer.launch
Tech report/Code/ros_catkin_ws/src/mission1/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission1/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission2/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission2/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission3/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission3/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission4/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission4/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission5/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission5/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission6/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission6/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/mission7/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/mission7/src/: main.cpp
Tech report/Code/ros_catkin_ws/src/octomap_merger/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/octomap_merger/launch/: octomap_merger.launch  pcd_to_octomap.launch
Tech report/Code/ros_catkin_ws/src/octomap_merger/src/: octomap_publisher.cpp  octree_converter.cpp
Tech report/Code/ros_catkin_ws/src/rgbdslam_v2-indigo/: CMakeLists.txt
Tech report/Code/ros_catkin_ws/src/rgbdslam_v2-indigo/launch/: activate_gui.launch  default_params_raw_data_test.launch  demo_rgbdslam.launch  octomap_server.launch  online_rgbdslam.launch  raw_data_test.launch  raw_data_test2.launch  (+7 more)
Tech report/Code/ros_catkin_ws/src/trajectory/: CMakeLists.txt  package.xml
Tech report/Code/ros_catkin_ws/src/trajectory/src/: erle_world.cpp  vbuilding.cpp
Tech report/Initial guess/OpenSCAD/: complete.stl  complete_no_ceiling.stl  dataset_model.scad  v315_v317_hall.stl  v315_v317_hall_no_ceiling.stl
Tech report/Manuals/Datasets/: freenect_install.docx  gscam_install.docx  record_lsdslam.docx  record_rgbdslam.docx
Tech report/Manuals/Initial guess/: modeling_initial_guess.docx
Tech report/Manuals/LSD_SLAM/: LSD_SLAM_install.docx  LSD_SLAM_usage.docx
Tech report/Manuals/RGBD_SLAM/: RGBD_SLAM_install.docx  RGBD_SLAM_usage.docx
Tech report/Manuals/Simulation/: create_world.docx  simulation_install.docx  simulation_sensors.docx  simulation_usage.docx
Tech report/Test results/LSD_SLAM/: lsd_slam_demo_result.ot
Tech report/Test results/Map merging/: merged.bt  merged.ot  octomap_merger_params.txt  rgbdslam.bt
Tech report/Test results/RGBD_SLAM/: rgbdslam_real_result_estimate.txt
(+107 files in other folders)
